kubernetes/Tenark.DbMigrator/base/tenark-dbmigrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ternark-authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ternark-authserver
  template:
    metadata:
      labels:
        app: ternark-authserver
    spec:
      containers:
      - name: ternark-authserver
        image: ternark-authserver:1.0
        resources:
          limits:
            cpu: "2"
            memory: "2048Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
